chore: update project branding and remove lovable-tagger dependency
- Remove lovable-tagger dependency and related Vite config
- Add .vercel to gitignore

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QR Code Generator - Create QR Codes Instantly</title>
     <meta name="description" content="Generate beautiful QR codes instantly for URLs, text, and more. Free, fast, and easy to use QR code generator." />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Dijitize.com" />
 
     <meta property="og:title" content="QR Code Generator - Create QR Codes Instantly" />
     <meta property="og:description" content="Generate beautiful QR codes instantly for URLs, text, and more. Free, fast, and easy to use QR code generator." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://dijitize.com/opengraph-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@dijitize" />
+    <meta name="twitter:image" content="https://dijitize.com/opengraph-image.png" />
   </head>
 
   <body>
